# lattice

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
apps/bench/: main.c
docs/: API_SKETCH.md  ARCHITECTURE.md  PROJECT_PLAN.md  PROPOSAL.md
include/lattice/: lattice.h  types.h  world.h
src/: world.c
tests/: check_bench_output.cmake  test_main.c
